RESOLVED FIXED 79717
Printed font-size should not be dependant on zoom level
https://bugs.webkit.org/show_bug.cgi?id=79717
Summary Printed font-size should not be dependant on zoom level
Emil A Eklund
Reported 2012-02-27 16:56:31 PST
When printing a page the zoom level (Ctrl +/-) is currently being taken into account. This seems incorrect and does not match the behavior of IE, FireFox or Opera. Please note that CSS zoom, unlike full page zoom, _should_ be respected for printing. Downstream chromium bug report: http://code.google.com/p/chromium/issues/detail?id=59692
Attachments
Patch (3.46 KB, patch)
2012-02-27 17:03 PST, Emil A Eklund
no flags
Patch for landing (3.50 KB, patch)
2012-02-27 18:24 PST, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-02-27 17:03:20 PST
Emil A Eklund
Comment 2 2012-02-27 18:24:08 PST
Created attachment 129157 [details] Patch for landing
WebKit Review Bot
Comment 3 2012-02-27 21:40:43 PST
The commit-queue encountered the following flaky tests while processing attachment 129157 [details]: compositing/reflections/nested-reflection-transformed2.html bug 79743 (author: simon.fraser@apple.com) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 4 2012-02-27 21:43:03 PST
Comment on attachment 129157 [details] Patch for landing Clearing flags on attachment: 129157 Committed r109073: <http://trac.webkit.org/changeset/109073>
WebKit Review Bot
Comment 5 2012-02-27 21:43:08 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6 2012-02-27 22:36:49 PST
The new test fails on Qt: --- /ramdisk/qt-linux-64-release/build/layout-test-results/printing/zoomed-document-expected.txt +++ /ramdisk/qt-linux-64-release/build/layout-test-results/printing/zoomed-document-actual.txt @@ -1,1 +1,11 @@ -PASS Document zoom should not apply when printing. +FAIL Document zoom should not apply when printing.Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +Got 2 pages, expected 1. +
Csaba Osztrogonác
Comment 7 2012-02-27 22:48:05 PST
(In reply to comment #6) > The new test fails on Qt: > --- /ramdisk/qt-linux-64-release/build/layout-test-results/printing/zoomed-document-expected.txt > +++ /ramdisk/qt-linux-64-release/build/layout-test-results/printing/zoomed-document-actual.txt > @@ -1,1 +1,11 @@ > -PASS Document zoom should not apply when printing. > +FAIL Document zoom should not apply when printing.Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > +Got 2 pages, expected 1. > + I skipped it to paint the Qt bot green - http://trac.webkit.org/changeset/109079
Emil A Eklund
Comment 8 2012-02-28 08:57:55 PST
(In reply to comment #7) > I skipped it to paint the Qt bot green - http://trac.webkit.org/changeset/109079 Thanks, I'll update it to work on QT.
Note You need to log in before you can comment on or make changes to this bug.