Printed font-size should not be dependant on zoom level https://bugs.webkit.org/show_bug.cgi?id=79717

Reviewed by Adam Barth.

Ignore full page zoom level when printing a document.

Source/WebCore:

Test: printing/zoomed-document.html

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList):

LayoutTests:

* printing/zoomed-document-expected.txt: Added.
* printing/zoomed-document.html: Added.


Canonical link: https://commits.webkit.org/96835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109073 268f45cc-cd09-0410-ab3c-d52691b4dbfc